--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
 
     <string name="posted_on_date">on %s</string>
 
+    <!-- Fonts -->
     <string name="font_roboto_thin">sans-serif-thin</string>
     <string name="font_roboto_regular">sans-serif</string>
     <string name="font_roboto_mono">monospace</string>
@@ -22,8 +23,10 @@
     <string name="font_roboto_light">sans-serif-light</string>
     <string name="font_roboto_condensed">sans-serif-condensed</string>
 
-    <!-- Fonts -->
     <string name="transition_title">transTitle</string>
+    <string name="transition_subreddit_icon">transSubredditIcon</string>
+    <string name="transition_subreddit_icon_background">transSubredditIconBG</string>
+    <string name="transition_subreddit_icon_placeholder">transSubredditIconPlaceHolder</string>
     <string name="transition_image_preview">preview</string>
     <string name="transition_background_preview">preview_background</string>
 
